--- a/Business_Landing_Page/payment.css
+++ b/Business_Landing_Page/payment.css
@@ -1,113 +1,115 @@
 /* Global styles */
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
   }
   
   /* Layout styles */
 
 body{
-    background-color: grey;
+  background-color: grey;
 }
 
 form{
-    background-color: #f2f2f2;
-    border: 2px solid #1e1919;
-    border-radius: 20px;
-    padding: 30px;
-    margin: 15px;
+  background-color: #f2f2f2;
+  border: 2px solid #1e1919;
+  border-radius: 20px;
+  padding: 30px;
+  margin: 15px;
 }
 
 
   .container {
-    background-color: #f2f2f2;
-    border: 1px solid lightgrey;
-    border-radius: 3px;
-    margin: 0 auto;
-    max-width: 800px;
-    padding: 20px;
+  background-color: #f2f2f2;
+  border: 1px solid lightgrey;
+  border-radius: 3px;
+  margin: 0 auto;
+  max-width: 800px;
+  padding: 20px;
   }
   
   .row {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 -16px;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 -16px;
   }
   
   .col-25 {
-    flex: 0 0 25%;
-    max-width: 25%;
-    padding: 0 16px;
+  flex: 0 0 25%;
+  max-width: 25%;
+  padding: 0 16px;
   }
   
   .col-50 {
-    flex: 0 0 50%;
-    max-width: 50%;
-    padding: 0 16px;
+  flex: 0 0 50%;
+  max-width: 50%;
+  padding: 0 16px;
   }
   
   .col-75 {
-    flex: 0 0 75%;
-    max-width: 75%;
-    padding: 0 16px;
+  flex: 0 0 75%;
+  max-width: 75%;
+  padding: 0 16px;
   }
   
   /* Form styles */
   label {
-    display: block;
-    margin-bottom: 10px;
+  display: block;
+  margin-bottom: 10px;
   }
   
   input[type="text"] {
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    margin-bottom: 20px;
-    padding: 12px;
-    width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  margin-bottom: 20px;
+  padding: 12px;
+  width: 100%;
   }
   
   .icon-container {
-    font-size: 24px;
-    margin-bottom: 20px;
-    padding: 7px 0;
+  font-size: 24px;
+  margin-bottom: 20px;
+  padding: 7px 0;
   }
   
   .btn {
-    background-color: #04AA6D;
-    border: none;
-    border-radius: 3px;
-    color: white;
-    cursor: pointer;
-    font-size: 17px;
-    margin: 10px 0;
-    padding: 12px;
-    width: 100%;
+  background-color: #04AA6D;
+  border: none;
+  border-radius: 3px;
+  color: white;
+  cursor: pointer;
+  font-size: 17px;
+  margin: 10px 0;
+  padding: 12px;
+  width: 100%;
   }
   
   .btn:hover {
-    background-color: #1e1919;
+  background-color: #1e1919;
   }
   
   /* Other styles */
   a {
-    color: #2196F3;
+  color: #2196F3;
   }
   
   hr {
-    border: 1px solid lightgrey;
+  border: 1px solid lightgrey;
   }
   
   span.price {
-    color: grey;
-    float: right;
+  color: grey;
+  float: right;
   }
   
 #logo{
-    display: block;
-    margin-left: 15%;
-    width: 70%;
-    height: 300px;
-    border-radius: 20px;
-    box-shadow: 5px 5px 5px 5px;
+  display: block;
+  margin-left: 15%;
+  width: 70%;
+  height: 300px;
+  border-radius: 20px;
+  box-shadow: 5px 5px 5px 5px;
 }
-  
-  
+
+.invalid{
+  background-color: rgb(212, 91, 91);
+}
