--- a/Post Job Page/CSS/postJob_Style.css
+++ b/Post Job Page/CSS/postJob_Style.css
@@ -7,13 +7,13 @@ h1{
     text-align: center;
     font-weight: lighter;
 }
-header{
+/* header{
     color: white;
     background-color: #24262b;
     display: flex;
     width: 100%;
     margin-bottom: 0%;
-}
+} */
 
 /* footer{
     color: white;
@@ -23,7 +23,7 @@ header{
 } */
 
 /*FOOTER*/
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 *{
 	margin:0;
@@ -96,7 +96,7 @@ ul{
 .footer-col .social-links a:hover{
 	color: #24262b;
 	background-color: #ffffff;
-}
+} */
 
 /*responsive*/
 /* @media(max-width: 767px){
